# citypy

./: .gitignore  README.md  citypy_gmm13_road_clusters.gmm  pyproject.toml
citypy/: __init__.py  __main__.py  console.py  describe.py  logging_setup.py  road_class.py
citypy/acquire/: __init__.py  acquire_buildings.py  acquire_city_center.py  acquire_extents.py  acquire_ghsl.py  acquire_land_cover.py  acquire_landuse.py  acquire_raster.py  acquire_roads.py  acquire_water.py  api_config.py
citypy/cli/: __init__.py  app_cli.py  main_cli.py
citypy/cli/commands/: classes.py  cluster_cli.py  clusters.py  combine_cli.py  contextualize_cli.py  csv_command.py  describe_cli.py  download_cli.py  encode.py  explore_cli.py  gridify.py  gridstats.py  normalise_cli.py  plot_cli.py  process_cli.py  rasterify.py
citypy/cluster/: hdbscan.py  kmeans.py
citypy/contextualize/: building_neighborhood.py  merge.py  road_neighborhood.py
citypy/process/: process_landuse.py
citypy/process/layers/: __init__.py  baseclass.py  blocks.py  enclosures.py  (+3 more)
citypy/util/: gpkg.py  graph.py  raster.py
config/: __init__.py  dynaconf_setup.py  logging_config.json  settings.toml
scripts/: analysis_streets.py  cities.txt  cities_mega.txt  cities_small.txt  contextualize.sh  download.sh  encode.sh  extract_grids.py  pie_charts.py  process.sh  road_clusters_analysis.ipynb  thank_you.py
tests/: conftest.py  test_cli.py  test_gpkg.py  test_road_neighborhood.py  test_util.py
tests/test_acquire/: fixtures.py  test_acquire_buildings.py  test_download_cli.py  test_download_ghsl.py  test_download_roads.py
tests/test_data/: generate_test_data.py  raw_buildings.gpkg
tests/test_process/: test_process_buildings.py
(+15 files in other folders)
