[tool.poetry]
name = "citypy"
version = "0.1.0"
description = ""
authors = ["Oliver J. Post <65900202+OliverJPost@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
geopandas = "^1.0.1"
shapely = "^2.0.3"
osmnx = "^1.9.1"
pyogrio = "^0.7.2"
momepy = "^0.8.0"
dask = "^2024.3.1"
rasterio = "^1.3.9"
matplotlib = "^3.8.3"
folium = "^0.16.0"
mapclassify = "^2.6.1"
retworkx = "^0.14.2"
polars = "^0.20.16"
dynaconf = "^3.2.5"
rx = "^3.2.0"
geopy = "^2.4.1"
seaborn = "^0.13.2"
gdal = "3.8.5" # Exact version because of hassle of upgrading on server
pylandstats = "^2.4.2"
loguru = "^0.7.2"
pyarrow = "^17.0.0"
overturemaps = "0.8.0" # Exact version because private functions are used
fitter = "^1.7.1"
catboost = "^1.2.5"
fiona = "^1.10.0"
clustergram = "^0.8.1"
jupyter = "^1.1.1"

[tool.poetry.scripts]
citypy = "citypy.__main__:main"

[tool.ruff]
line-length = 88
select = ["ALL"]
target-version = "py311"
ignore = [
    # Temporary
    "D103", # Docstring missing
    # Permanent
    "RET504" # Unnecessary return variable
]
fixable = [
    "NPY001", # Fix numpy types, which are removed in 1.24.
    "RUF100", # Remove unused noqa comments.,
    "I001"
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101", # Use of assert
    "D", # Documentation
    "T201", # Print found
    "ANN", # Type annotations
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
